--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,12 @@
         android:theme="@style/Theme.PillAssist"
         tools:targetApi="31">
         <activity
+            android:name=".CrearAlarma"
+            android:exported="false" />
+        <activity
+            android:name=".VerMedicamentos"
+            android:exported="false" />
+        <activity
             android:name=".Second"
             android:exported="false" />
         <activity
