--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,6 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
-
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -18,6 +17,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PillAssist"
         tools:targetApi="31">
+        <activity
+            android:name=".CambiarContrasenaProfile"
+            android:exported="false" />
         <activity
             android:name=".Second"
             android:exported="false" />
@@ -47,8 +49,7 @@
 
             <meta-data
                 android:name="android:app.lib_name"
-                android:value=""
-                />
+                android:value="" />
         </activity>
     </application>
 
